--- a/SaiAudio2/SaiAudio2.vcxproj
+++ b/SaiAudio2/SaiAudio2.vcxproj
@@ -118,12 +118,16 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="SaiAudio2.cpp" />
     <ClCompile Include="LoadSoundClass.cpp" />
+    <ClCompile Include="SaiDelay.cpp" />
+    <ClCompile Include="SaiEffect.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LoadSoundClass.h" />
     <ClInclude Include="libTool.h" />
     <ClInclude Include="SaiAudio2.h" />
     <ClInclude Include="Main.h" />
+    <ClInclude Include="SaiDelay.h" />
+    <ClInclude Include="SaiEffect.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
