--- a/SaiAudio2/SaiAudio2.vcxproj
+++ b/SaiAudio2/SaiAudio2.vcxproj
@@ -120,6 +120,7 @@
     <ClCompile Include="LoadSoundClass.cpp" />
     <ClCompile Include="SaiDelay.cpp" />
     <ClCompile Include="SaiEffect.cpp" />
+    <ClCompile Include="SaiFadeIn.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LoadSoundClass.h" />
@@ -128,6 +129,7 @@
     <ClInclude Include="Main.h" />
     <ClInclude Include="SaiDelay.h" />
     <ClInclude Include="SaiEffect.h" />
+    <ClInclude Include="SaiFadeIn.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
