--- a/SaiAudio2/SaiAudio2.vcxproj.filters
+++ b/SaiAudio2/SaiAudio2.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="SaiEffect.cpp">
       <Filter>ソース ファイル\soundEffect</Filter>
     </ClCompile>
+    <ClCompile Include="SaiFadeIn.cpp">
+      <Filter>ソース ファイル\soundEffect</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main.h">
@@ -60,6 +63,9 @@
       <Filter>ヘッダー ファイル\soundEffect</Filter>
     </ClInclude>
     <ClInclude Include="SaiEffect.h">
+      <Filter>ヘッダー ファイル\soundEffect</Filter>
+    </ClInclude>
+    <ClInclude Include="SaiFadeIn.h">
       <Filter>ヘッダー ファイル\soundEffect</Filter>
     </ClInclude>
   </ItemGroup>
